hard-gists/8458501/run.log
=== Docker Run Log for 8458501 ===
Started at: Mi 29. Okt 17:48:49 CET 2025

[2025-10-29 17:48:49] START: Running container for 8458501
[2025-10-29 17:48:49] SUCCESS: Container 54e8f8f813eda89b811de5888ec63fba78fb19f37ee4e8e81122a6de96ee6c58 started for 8458501
=== Container logs for 8458501 ===
  File "/snippet.py", line 62
    print "Bob secret", bob_secret.encode("hex")
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8458501 ===
[2025-10-29 17:48:51] INFO: Container 54e8f8f813eda89b811de5888ec63fba78fb19f37ee4e8e81122a6de96ee6c58 has stopped
